@@ -72,10 +72,8 @@ public class TimeLockService {
 		}
 
 		if (user.getType() == UserType.ADMIN || user.getType() == UserType.FOUNDATION_ADMIN) {
-			if ((user.getType() == UserType.FOUNDATION_ADMIN
-					&& !user.getFoundation().getId().equals(organization.getFoundation().getId())) || (user.getType() == UserType.ADMIN && !user.getOrganization().equals(organization))) {
-				return false;
-			}
+            return (user.getType() != UserType.FOUNDATION_ADMIN
+                    || user.getFoundation().getId().equals(organization.getFoundation().getId())) && (user.getType() != UserType.ADMIN || user.getOrganization().equals(organization));
 		}
 		return true;
 	}
@@ -476,7 +474,7 @@ public class TimeLockService {
 					.map(Long::new).collect(Collectors.toSet()));
 		}
 		timeLockModel.setTimeLockExceptionCount(
-				new Long(timeLock.getTimeLockExceptions().stream().filter(e -> !e.isDeleted()).count()).intValue());
+                Long.valueOf(timeLock.getTimeLockExceptions().stream().filter(e -> !e.isDeleted()).count()).intValue());
 		timeLockModel.setUnlockPassword(timeLock.getUnlockPassword());
 		return timeLockModel;
 	}
